--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Ricky's Web Journal </title>
+	<title> Star Wars: Scattered Secrets</title>
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -12,6 +12,18 @@
 	
 		<div class = "galaxy">
 			<h1> A long time ago in a galaxy far, <br> far away...</h1>
+		</div>
+
+		<div class ="mono">
+
+			<h1> The Fall of the Empire </h1>
+
+			<h1> After the destruction of the second Death Star, <br> order ceased to exist in the galaxy </h1>
+
+			<h1> The Rebellion began to restore the Republic. And so, <br> the New Republic was born. </h1>
+
+			<h1> But, I’m convinced of the return of the Empire. </h1>
+
 		</div>
 
 		<div class ="scattered-secrets">
