--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 	<div class ="container">
+
+		<div class="navbar">
+			<nav>
+				<ul>
+					<li> <a href="database.html"> database </a></li>
+				</ul>
+			</nav>
+		</div>
 	
 		<div class = "galaxy">
 			<h1> A long time ago in a galaxy far, <br> far away...</h1>
@@ -30,13 +38,11 @@
 			<img src="images/logo.png" alt="logo" class ="center">
 		</div>
 
-		<div class ="timeline">
-		</div>
-
-		<footer> 
-			<p> Copyright ©2022 Ricky Garcia | This project is fan-made and is NOT affiliated with Lucasfilm or Disney</p> 
-		</footer>
 	</div>
+	
+	<footer> 
+			<p> Copyright ©2022 Ricky Garcia | This project is fan-made and is NOT affiliated with Lucasfilm or Disney</p> 
+	</footer>
 
 </body>
 </html>
