--- a/database.html
+++ b/database.html
@@ -28,16 +28,18 @@
 
 	
 		<div class ="width-12-12-m width-4-12 logo-holder">
-			<div class = "scattered-secrets">
+			<div class = "story">
 				<a href="crash.html"><img src="images/ImperialHolo.png" alt="ImperialHolo"> </a>
-				<h1> THE CRASH SITE </h1>
+				<h4> THE CRASH SITE </h4>
+				<h5> THE CRASH SITE </h5>
 			</div>
 		</div>
 				
 		<div class ="width-12-12-m width-4-12 logo-holder">
-				<div class = "scattered-secrets">
+				<div class = "story">
 					<img src="images/Kaminoan.png" alt="Kaminoan">
-					<h1> UNCHARTED WATERS </h1>
+					<h4> UNCHARTED WATERS </h4>
+					<h5> UNCHARTED WATERS </h5>
 				</div>
 		</div>
 			</div>
