--- a/crash.html
+++ b/crash.html
@@ -25,7 +25,7 @@
 		<div class="row">
 			<div class ="course-col">
 				<h3> CHAPTER 1</h3>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+				<p> There are talks that this very moon I'm in carries a lot of history. Clones gone rogue from the Empire. A team of two single handedly took down a whole Star Destroyer to avoid the mass persecution. I believe it. Part of me feels as if the Empire is hiding something. I'm not here to confirm my suspicions though. I'm here because the computers are worth something to the Scrapper Guild. And, I want in. </p>
 			</div>
 
 			<div class ="course-col">
