--- a/crash.html
+++ b/crash.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://use.typekit.net/qrc2wgp.css">
-	<link rel="preload" href="Aurebesh.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 </head>
 <body>
 	<div class ="container">
