--- a/database.html
+++ b/database.html
@@ -37,7 +37,7 @@
 				
 		<div class ="width-12-12-m width-4-12 logo-holder">
 				<div class = "story">
-					<img src="images/Kaminoan.png" alt="Kaminoan">
+					<a href ="uncharted.html"> <img src="images/Kaminoan.png" alt="Kaminoan"> </a>
 					<h4> UNCHARTED WATERS </h4>
 					<h5> UNCHARTED WATERS </h5>
 				</div>
