--- a/uncharted.html
+++ b/uncharted.html
@@ -20,8 +20,8 @@
 		</div>
 	
 		<section class="course">
-		<h2> THE CRASH SITE </h2>
-		<h1> THE CRASH SITE </h1>
+		<h2> UNCHARTED WATERS</h2>
+		<h1> UNCHARTED WATERS</h1>
 		<div class="row">
 			<div class ="course-col">
 				<h3> CHAPTER 1</h3>
