--- a/uncharted.html
+++ b/uncharted.html
@@ -25,12 +25,12 @@
 		<div class="row">
 			<div class ="course-col">
 				<h3> CHAPTER 1</h3>
-				<p> There are talks that this very moon I'm in carries a lot of history. Clones gone rogue from the Empire. A team of two single handedly took down a whole Star Destroyer to avoid the mass persecution. I believe it. Part of me feels as if the Empire is hiding something. I'm not here to confirm my suspicions though. I'm here because the computers are worth something to the Scrapper Guild. And, I want in. </p>
+				<p> Right out of hyperspace. Left the previous star system in haste so that the Empire does not track me. What scares me, however, is that the Scrapper Guild has commissioned me to retrieve the computer from the debris of the Star Destroyer. They'll know that I have accessed the computer. And if the Guild know, the Empire knows if my suspicions are correct. Kamino. I have arrived. All I see are abandoned stations, drowned in the sea.  </p>
 			</div>
 
 			<div class ="course-col">
 				<h3> CHAPTER 2</h3>
-				<p> My droid, R-12, picked up a scan. One of the computers are still live. After all these years, on a deserted moon, one wouldn't think that would be possible. R-12 sliced it. A weird recording of a clone repeated. Inhibitor chips. Kaminoans. The scary part is that these clones have names? Rex? Fives? Aren't they all assigned numbers? As far as I know, Kamino is lost. </p>
+				<p> There's a station that is still up: surprisingly. This place looks like it has been shot from the sky. Meteors. Maybe a starfighter scrimmage. Something. R-12 has been slicing through the doors, which either work or don't. The Kaminoans are some tough engineers. We investigate the compound, and we stumble upon a lab.</p>
 			</div>
 
 			<div class ="course-col">
