--- a/database.html
+++ b/database.html
@@ -14,12 +14,12 @@
 					<div class ="side-nav">
 						<nav>
 							<ul class ="nav-links">
-								<li> <a href=".html">entries</a> </li>
-								<li> <a href=".html">worlds</a> </li> 
-								<li> <a href=".html">characters</a> </li>
+								<li> <a href="database.html">entries</a> </li>
+								<li> <a href="holder.html">worlds</a> </li> 
+								<li> <a href="holder.html">characters</a> </li>
 								<li> <a href=".html">map</a> </li>
 								<li> <a href="index.html">timeline</a> </li>
-								<li> <a href=".html">consiprators</a> </li>
+								<li> <a href="holder.html">consiprators</a> </li>
 							</ul>
 						</nav>
 					</div>
