--- a/Mandalorian.html
+++ b/Mandalorian.html
@@ -18,26 +18,11 @@
 			</nav>
 		</div>
 	
-		<div class = "galaxy">
-			<h1> A long time ago in a galaxy far, <br> far away...</h1>
+		
+
+		<div class ="DeathWatch">
+			<img src="images/DeathWatch.png" alt="DeathWatch"> </a>
 		</div>
-
-		<div class ="mono">
-
-			<h1> The Fall of the Empire </h1>
-
-			<h1> After the destruction of the second Death Star, <br> order ceased to exist in the galaxy </h1>
-
-			<h1> The Rebellion began to restore the Republic. And so, <br> the New Republic was born. </h1>
-
-			<h1> But, I’m convinced of the return of the Empire. </h1>
-
-		</div>
-
-		<div class ="scattered-secrets">
-			<img src="images/logo.png" alt="logo" class ="center">
-		</div>
-	</div>
 
 	<footer> 
 			<p> Copyright ©2022 Ricky Garcia | This project is fan-made and is NOT affiliated with Lucasfilm or Disney</p> 
