--- a/uncharted.html
+++ b/uncharted.html
@@ -30,12 +30,12 @@
 
 			<div class ="course-col">
 				<h3> CHAPTER 2</h3>
-				<p> There's a station that is still up: surprisingly. This place looks like it has been shot from the sky. Meteors. Maybe a starfighter scrimmage. Something. R-12 has been slicing through the doors, which either work or don't. The Kaminoans are some tough engineers. We investigate the compound, and we stumble upon a lab.</p>
+				<p> There's a station that is still up: surprisingly. This place looks like it has been shot from the sky. Meteors. Maybe a starfighter scrimmage. Something. R-12 has been slicing through the doors, which either work or don't. The Kaminoans are some tough engineers. We investigate the compound, and we stumble upon a lab. I'm afraid I do not have much time. Surely, the Empire is smart enough that I would find my way to Kamino. Not to mention, Kamino was formerly under Imperial occupation. I must act in haste.</p>
 			</div>
 
 			<div class ="course-col">
 				<h3> CHAPTER 3</h3>
-				<p> I felt a tug in me, telling me to go to Kamino. These computers aren't to be sold to the Scrapper Guild as the Empire has a hold of them. Perhaps the Empire is using them as a clean up crew to this whole conspiracy. Before I knew it, a blinker in my field of vision lit up. The Empire knows. I had R-12 wipe the computer, and we were on our way. To uncharted waters.</p>
+				<p> We entered a mysterious lab. And, you would not believe it. A Kaminoan in a cloning tank. The Kamonian is all decayed, and withered. There were rumors that the Kaminoans were the cloners responsible for the Grand Army of the Republic. But, what did that Rex clone say about the chip? They were programmed? These clones were the ones who annihilated their Jedi Masters. There was a insignia in one of the other rooms. 501. I have to find out what that is. I need answers. Something is telling me there's no going back.</p>
 			</div>
 		</div>
 		</section>
